# CADET-Core

./: .appveyor.yml  .clang-format  .codecov.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHORS  AUTHORS.md  AUTHORS.txt  BUILD-LINUX.md  BUILD-OSX.md  BUILD-WINDOWS.md  CITATION.bib  CITATION.cff  CLA.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  Dockerfile  LICENSE-ThirdParty.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  THIRDPARTY.license  ThirdParty-LICENSES.txt  codecov.yaml  pull_request_template.md  pyproject.toml  vcpkg.json
src/build-tools/: CMakeLists.txt  templateCodeGen.cpp
src/cadet-cli/: CMakeLists.txt  Logging.hpp  ProgressBar.cpp  ProgressBar.hpp  SignalHandler.cpp  SignalHandler.hpp  cadet-cli.cpp
src/cadet-cs/: CMakeLists.txt  cadet-cs.cpp  cadet-cs_micro.cpp
src/cadet-mex/: CMakeLists.txt  Logging.hpp  MatlabCommands.cpp  MatlabCommands.hpp  MatlabException.hpp  MatlabExternalFunction.cpp  MatlabHandle.hpp  MatlabIO.hpp  MatlabReaderWriter.hpp  MatlabUndocumentedSupport.hpp  cadet-mex.cpp
src/cadet-mi/: CMakeLists.txt  CadetMex.cpp  CustomParameterTransformation.m  DiscretizationGRM.m  HDF5Tools.m  Helpers.m  LogParameterTransformation.m  MexSimulator.m  ModelGRM.m  MultiFields.m  ParameterFit.m  ParameterTransformation.m  PiecewiseCubicPolyProfile.m  ResultsHelper.m  Simulator.m  extractParam.m  fitColumn.m  installCADET.m  isCADETupdateAvailable.m  jacobianFiniteDifferences.m  makeSensitivity.m  shiftPoly.m  splitstring.m  strsplit_workaround.m  switchStorageOrdering.m
src/cadet-mi/bindings/: AntiLangmuirBinding.m  BiLangmuirBinding.m  BiStericMassActionBinding.m  BindingModel.m  ColloidalBinding.m  ExtFunAntiLangmuirBinding.m  ExtFunBiLangmuirBinding.m  ExtFunBiStericMassActionBinding.m  ExtFunExtendedMobilePhaseModulatorBinding.m  ExtFunGeneralizedIonExchangeBinding.m  ExtFunKumarLangmuirBinding.m  ExtFunLangmuirBinding.m  ExtFunLinearBinding.m  ExtFunMobilePhaseModulatorBinding.m  ExtFunMultiStateStericMassActionBinding.m  ExtFunSaskaBinding.m  ExtFunSelfAssociationBinding.m  ExtFunSpreadingBinding.m  ExtFunStericMassActionBinding.m  ExtendedMobilePhaseModulatorBinding.m  ExternalFunctionLangmuirBinding.m  ExternalFunctionMobilePhaseModulatorsBinding.m  ExternalFunctionStericMassActionBinding.m  GeneralizedIonExchangeBinding.m  KineticQuasiStationaryBindingModel.m  KumarLangmuirBinding.m  LangmuirBinding.m  LinearBinding.m  MobilePhaseModulatorBinding.m  MobilePhaseModulatorsBinding.m  MultiComponentBiLangmuirBinding.m  NoneBinding.m  (+7 more)
src/libcadet/: AdUtils.cpp  AdUtils.hpp  AdsorptionModel.hpp  AdsorptionModel_EXTL.hpp  AdsorptionModel_EXTMPM.hpp  AdsorptionModel_EXTSMA.hpp  AdsorptionModel_LINEAR.hpp  AdsorptionModel_MCBL.hpp  AdsorptionModel_MCL.hpp  AdsorptionModel_MPM.hpp  AdsorptionModel_SAI.hpp  AdsorptionModel_SMA.hpp  AutoDiff.cpp  AutoDiff.hpp  Benchmark.hpp  BindingModelFactory.cpp  BindingModelFactory.hpp  CMakeLists.txt  Cadet.cpp.in  CadetConvenience.cpp  CadetConvenience.hpp  ChromatographyModel.hpp  CompileTimeConfig.hpp.in  ConfigurationHelper.hpp  DGSubcellLimiterFV.hpp  ExchangeModelFactory.cpp  ExchangeModelFactory.hpp  FactoryFuncs.cpp  GeneralRateModel.cpp  GeneralRateModel.hpp  HighResKoren.hpp  JacobianData.cpp  JacobianData.hpp  LapackInterface.hpp  LocalVector.hpp  Logging.cpp  Logging.hpp  LoggingUtils.hpp  MathUtil.hpp  Memory.hpp  (+52 more)
src/tools/: CMakeLists.txt  FileIO.cpp  FormatConverter.cpp  FormatConverter.hpp  ToolsHelper.hpp  convertFile.cpp  createConvBenchmark.cpp  createLWE.cpp  createMCLin.cpp  createSCLang.cpp  createSCLin.cpp  createSCLinStep.cpp
test/: AD.cpp  Approx.hpp  BandMatrix.cpp  BindingModelAutoJacobian.cpp  BindingModelTests.cpp  BindingModelTests.hpp  BindingModels.cpp  BindingModels.hpp  CMakeLists.txt  CSTR-Residual.cpp  CSTR-Simulation.cpp  CadetMexDebugLinux.cpp  Callbacks.cpp  CellKernelTests.cpp  ColumnModel1D.cpp  ColumnModel2D.cpp  ColumnTests.cpp  ColumnTests.hpp  ConvectionDispersionOperator.cpp  ConvectionDispersionOperatorFV.cpp  Crystallization.cpp  CstrHelper.hpp  DenseMatrix.cpp  Dummies.hpp  FrustumGeneralRateModel.cpp  GRM-Residual.cpp  GRM-Simulation.cpp  GeneralRateModel.cpp  GeneralRateModel2D.cpp  GeneralRateModelDG.cpp  Graph.cpp  H5FileOutput.cpp  Histogram.cpp  JacobianHelper.hpp  JsonParameterProvider.cpp  JsonParameterProvider.hpp  JsonTestModels.cpp  JsonTestModels.hpp  LRMP-Residual.cpp  LRMP-Simulation.cpp  (+69 more)
test/RegressionData/: LWE.h5  SCL.h5
test/data/: 2CompLin2D.h5  2CompLin2D.json  config_2DGRM_KOREN_eq_Z128.json  config_2DGRM_KOREN_nonEq_Z128.json  config_2DGRM_WENO3_nonEq_Z128.json  config_COL1D_GRM_GPR_Shallow_MLP_7.json  config_COL1D_GRM_GPR_Shallow_RBF_15.json  config_COL1D_GRM_spline_knots_shallow_7.json  config_Col1D_GRM_GPR_Shallow_MLP_7.json  config_Col1D_GRM_GPR_Shallow_RBF_15.json  config_Col1D_GRM_langANN_1comp_benchmark1.json  config_Col1D_LRM_langANN_2comp_benchmark1.json  config_Col1D_LRM_langSPLINE_2comp_benchmark1.json  config_Col1D_LRM_langmuirGPR_2comp_benchmark1.json  config_MCT_KOREN_eq_Z128.json  config_MCT_KOREN_nonEq_Z128.json  config_MCT_WENO3_nonEq_Z128.json  config_acyclicSystem1_LRMP_linBnd_1comp.json  config_axKOREN_eq_Z128.json  config_axKOREN_nonEq_Z128.json  config_axKOREN_noneq_N128.json  config_axWENO2_eq_N128.json  config_axWENO2_eq_Z128.json  config_axWENO2_nonEq_Z128.json  config_axWENO2_noneq_N128.json  config_axWENO3_eq_N128.json  config_axWENO3_eq_Z128.json  config_axWENO3_nonEq_Z128.json  config_axWENO3_noneq_N128.json  config_cyclicSystem1_LRMP_linBnd_1comp.json  config_frustumCOL1D_transport_1comp_WENO3nonEq_benchmark1_FV_Z512.json  config_frustumKOREN_eq_Z128.json  config_frustumKOREN_nonEq_Z128.json  config_frustumWENO2_eq_Z128.json  config_frustumWENO2_nonEq_Z128.json  config_frustumWENO3_eq_Z128.json  config_frustumWENO3_nonEq_Z128.json  config_radCOL1D_transport_1comp_DGP3_benchmark1_DG_P3Z16.json  config_radKOREN_eq_Z128.json  config_radKOREN_nonEq_Z128.json  (+267 more)
(+826 files in other folders)
